# Graphiscs-Programming-Interface

./: .gitignore  CMakeLists.txt  README.txt
res/: rect.frag  rect.vert
res/shaders/: texture.frag  texture.vert
src/: GPI_FileReader.c  GPI_Shader.c  GPI_Shader.h  GPI_ShaderCompiler.c  GPI_VertexLayout.c  GPI_VertexLayout.h  main.cpp
src/GlWrappers/: Buffer.cpp  Buffer.h  GPI_Shader.cpp  GPI_VertexArray.cpp  GPI_VertexLayout.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Modules/: FileReader.cpp  FileReader.h  GPI_FileReader.cpp  ShaderCompiler.cpp  ShaderCompiler.h  TextureReader.cpp  TextureReader.h
